--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,7 @@
         text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow */
     }
 
-    .services div {
+    .services div: hover {
         background: #111827; /* Background color */
         padding: 20px; /* Padding */
         margin: 10px; /* Margin */
@@ -345,7 +345,7 @@
         border-radius: 20px;
     }
 
-    .services img:hover {
+    .services img {
         transform: translateY(-10px); /* Move up on hover */
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Box shadow on hover */
     }
